<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.CreateNewAccountActivity"
    android:padding="20dp">

    <EditText
        android:id="@+id/username_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint_text"
        android:inputType="username"
        android:importantForAutofill="no"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/user_email_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint_text"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/password_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/create_new_account_button_create_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account_text"
        android:background="@android:color/transparent"/>

</LinearLayout>